<?xml version="1.0"?>
<package>
  <name>scan_360</name>
  <version>0.0.0</version>
  <description>The scan_360 package</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <!-- <build_depend>image_transport</build_depend> -->
  <!-- <build_depend>cv_bridge</build_depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>tf2</build_depend> -->
  <!-- <build_depend>tf2_ros</build_depend> -->
  <!-- <run_depend>message_runtime</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>image_transport</run_depend> -->
  <!-- <run_depend>cv_bridge</run_depend> -->
  <!-- <run_depend>tf2</run_depend> -->
  <!-- <run_depend>tf2_ros</run_depend> -->


  <export>

  </export>
</package>
